# ymdesktop

./: .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/include/: Application.h  Authorization.h  Core.h  ICore.h  INetworkManager.h  IUserInfo.h  NetworkManager.h  QmlHandler.h  User.h  UserHelper.h  YMusicUser.h
src/resources/: Authorization.qml  main.qml  qml.qrc
src/resources/qml/: Authorization.qml  MainHeader.qml  PlayerControl.qml  UserInfoDialog.qml  main.qml
src/src/: Application.cpp  Authorization.cpp  Core.cpp  NetworkManager.cpp  QmlHandler.cpp  User.cpp  UserHelper.cpp  YMusicUser.cpp  main.cpp
